crates/nash-parse/src/snapshots/nash_parse__expression__tests__expr_error_dirty_end.snap
---
source: crates/nash-parse/src/expression.rs
description: "Code:\n\n123abc"
---
Number(
    End,
    1,
    4,
)
