crates/nash-parse/src/snapshots/nash_parse__expression__tests__expr_error_empty.snap
---
source: crates/nash-parse/src/expression.rs
description: "Code:\n\n"
---
Start(
    1,
    1,
)
