crates/nash-parse/src/snapshots/nash_parse__expression__tests__expr_error_hex_no_digits.snap
---
source: crates/nash-parse/src/expression.rs
description: "Code:\n\n0x"
---
Number(
    HexDigit,
    1,
    3,
)
