crates/nash-parse/src/snapshots/nash_parse__expression__tests__expr_error_leading_zero.snap
---
source: crates/nash-parse/src/expression.rs
description: "Code:\n\n007"
---
Number(
    NoLeadingZero,
    1,
    2,
)
