crates/nash-parse/src/snapshots/nash_parse__expression__tests__expr_error_not_a_term.snap
---
source: crates/nash-parse/src/expression.rs
description: "Code:\n\nabc"
---
Start(
    1,
    1,
)
