crates/nash-parse/src/snapshots/nash_parse__expression__tests__expr_int_hex.snap
---
source: crates/nash-parse/src/expression.rs
description: "Code:\n\n0xFF"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: Int(
        255,
    ),
}
