crates/nash-parse/src/snapshots/nash_parse__expression__tests__expr_int_large.snap
---
source: crates/nash-parse/src/expression.rs
description: "Code:\n\n123456789"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 10,
        },
    },
    value: Int(
        123456789,
    ),
}
