crates/nash-parse/src/snapshots/nash_parse__expression__tests__expr_int_simple.snap
---
source: crates/nash-parse/src/expression.rs
description: "Code:\n\n42"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: Int(
        42,
    ),
}
