crates/nash-parse/src/snapshots/nash_parse__expression__tests__expr_int_zero.snap
---
source: crates/nash-parse/src/expression.rs
description: "Code:\n\n0"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 2,
        },
    },
    value: Int(
        0,
    ),
}
