crates/nash-parse/src/snapshots/nash_parse__expression__tests__expr_string_multi.snap
---
source: crates/nash-parse/src/expression.rs
description: "Code:\n\n\"\"\"multi-line\"\"\""
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 17,
        },
    },
    value: Str(
        "multi-line",
    ),
}
