crates/nash-parse/src/snapshots/nash_parse__expression__tests__expr_string_with_escape.snap
---
source: crates/nash-parse/src/expression.rs
description: "Code:\n\n\"hello\\nworld\""
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 15,
        },
    },
    value: Str(
        "hello\nworld",
    ),
}
